- Options:
  - Fast boot (warm boot / memory check bypass) is disabled by default
  - 68060 CPU level and --ttram support with new WinUAE CPU core
  - New --png-level option to decrease AVI compression CPU load
  - Mouse warping on reset & resolution change can be controlled
    with new --mousewarp option
- Hard drive emulation:
  - BUS ID for ACSI drive can be specified with --acsi
  - GUI and command line options to specify GEMDOS HD emulation drive
    (default = C:), or to skip recognized drives used by partitions
    on ACSI & IDE images
    - Partition count parsed by Hatari might not match count used by
      Atari HD driver due to driver differences in interpreting disk MBR
  - Refuse to mount same HD image from multiple Hatari instances
    (on platforms supporting BSD flock()), to avoid corrupting them
- SDL GUI:
  - joystick navigation in options GUI
  - keyboard navigation & shortcuts in options GUI
  - sort file selector items case-insensitively with folders first
  - Partial support for showing Latin1 chars from UTF-8 file names
  - AltGr+F<1-4> keyboard shortcuts to switch mode/type for emulated
    joysticks and joypads
  - User can reset emulation from CPU halt dialog
  - Fix: sync joystick changes with statusbar
  - Fix: update default max window size for 2-line statusbar
         NOTE: size would need to be updated in Hatari config files too!
  - Fix: statusbar assert when FPU/MMU/TT-RAM are enabled in WinUAE CPU core
  - When cpu enters 'halt' state in case of double bus/address errors,
    show a dialog window to reset or call the debugger
- Debugger:
  - Fix: crash when GEMDOS tracing is used without GEMDOS HD emulation
  - Fix: update external disassembler's CPU mask when CPU type is changed
         (it wasn't restricted to opcodes valid for given CPU type)
  - Fix: breakpoint addition/removal within chained breakpoints
  - Fix: Atari program detection on Windows for "symbols" command
  - Profiler support for TT-RAM (uses *ton* of memory)